--- a/deep-learning-fundamentals/unit08-NLP/01-bag-of-words/02_self_attention_from_scratch.ipynb
+++ b/deep-learning-fundamentals/unit08-NLP/01-bag-of-words/02_self_attention_from_scratch.ipynb
@@ -278,11 +278,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 18,
       "id": "03491130-ad33-4fb7-8ed2-12de9662d400",
       "metadata": {
         "id": "03491130-ad33-4fb7-8ed2-12de9662d400",
-        "outputId": "a48db226-7487-43d1-a43b-b4026e47ac07",
+        "outputId": "443ff3f8-fadf-4e25-a0af-2aed5ac96e93",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -292,6 +292,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "queries shape: torch.Size([6, 24])\n",
             "keys shape: torch.Size([6, 24])\n",
             "values shape: torch.Size([6, 28])\n"
           ]
@@ -299,9 +300,11 @@
       ],
       "source": [
         "# We can then generalize this to compute th remaining key\n",
+        "queries = W_Q.matmul(embedded_sentence.T).T\n",
         "keys = W_K.matmul(embedded_sentence.T).T\n",
         "values = W_V.matmul(embedded_sentence.T).T\n",
         "\n",
+        "print(f\"queries shape: {queries.shape}\")\n",
         "print(f\"keys shape: {keys.shape}\")\n",
         "print(f\"values shape: {values.shape}\")"
       ]
@@ -405,6 +408,38 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# let’s compute the ω values for all query and key\n",
+        "omegas = queries.matmul(keys.T)\n",
+        "print(omegas)"
+      ],
+      "metadata": {
+        "id": "Yiqyr6mQsOmz",
+        "outputId": "d1152510-c553-4d9c-d9de-cc4e090431b4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "Yiqyr6mQsOmz",
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[  16.4255,    8.1306,  -24.5414,  -19.6606,   -9.5164,   19.2777],\n",
+            "        [   8.5808,   -7.6597,    3.2558,    1.0395,   11.1466,   -0.4800],\n",
+            "        [ -39.2836,   -1.5165,  145.4603,   74.2561,   58.8007, -141.6884],\n",
+            "        [  -5.2174,   -4.6914,   74.9203,   30.6948,   35.7423,  -73.7313],\n",
+            "        [ -21.6147,   10.6362,   65.4888,   39.2832,   21.8495,  -80.2922],\n",
+            "        [  40.0111,   -8.6863, -129.7707,  -64.2901,  -39.9964,  102.5287]],\n",
+            "       grad_fn=<MmBackward0>)\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "##4) Computing Attention Scores"
@@ -422,10 +457,10 @@
       ],
       "metadata": {
         "id": "UbozZ3ZSGmjF",
-        "outputId": "14345a2c-4b37-410c-b1a5-d7073f1e2232",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "14345a2c-4b37-410c-b1a5-d7073f1e2232"
       },
       "id": "UbozZ3ZSGmjF",
       "execution_count": 12,
@@ -435,6 +470,38 @@
           "name": "stdout",
           "text": [
             "tensor([0.2912, 0.0106, 0.0982, 0.0625, 0.4917, 0.0458],\n",
+            "       grad_fn=<SoftmaxBackward0>)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# let’s compute the attention score for all input\n",
+        "attention_weights = F.softmax(omegas / d_k ** 0.5, dim=0)\n",
+        "print(attention_weights)"
+      ],
+      "metadata": {
+        "id": "IAWTtYdGtOMH",
+        "outputId": "e1dc6416-fba2-463e-b120-0bb08fb7ca62",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "IAWTtYdGtOMH",
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[8.0331e-03, 3.3870e-01, 8.4988e-16, 4.7194e-09, 8.7001e-07, 4.1668e-08],\n",
+            "        [1.6198e-03, 1.3490e-02, 2.4750e-13, 3.2281e-07, 5.9061e-05, 7.3838e-10],\n",
+            "        [9.2528e-08, 4.7273e-02, 1.0000e+00, 9.9907e-01, 9.9047e-01, 2.2396e-22],\n",
+            "        [9.6882e-05, 2.4726e-02, 5.5800e-07, 1.3737e-04, 8.9477e-03, 2.3690e-16],\n",
+            "        [3.4089e-06, 5.6487e-01, 8.1381e-08, 7.9295e-04, 5.2495e-04, 6.2078e-17],\n",
+            "        [9.9025e-01, 1.0940e-02, 3.9882e-25, 5.2177e-13, 1.7277e-09, 1.0000e+00]],\n",
             "       grad_fn=<SoftmaxBackward0>)\n"
           ]
         }
@@ -456,10 +523,10 @@
       "id": "ae181592-134d-4cff-983f-90d6fcae5068",
       "metadata": {
         "id": "ae181592-134d-4cff-983f-90d6fcae5068",
-        "outputId": "5bb34d17-a431-482d-acc4-e1e7c0a2c207",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5bb34d17-a431-482d-acc4-e1e7c0a2c207"
       },
       "outputs": [
         {
@@ -488,14 +555,14 @@
         "attention_weights_2.shape, values.shape, context_vector_2.shape"
       ],
       "metadata": {
-        "id": "CxfOCNguqbtF",
-        "outputId": "d7a9d4dd-ed9b-4676-b979-b595915e195b",
+        "id": "YfsaCo8jt93L",
+        "outputId": "9d491227-6a3a-4604-d3e6-d5ae129bd20f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "id": "CxfOCNguqbtF",
-      "execution_count": 17,
+      "id": "YfsaCo8jt93L",
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -505,7 +572,99 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# let’s compute the context vector for all\n",
+        "context_vector = attention_weights.matmul(values)\n",
+        "\n",
+        "print(context_vector.shape)\n",
+        "print(context_vector)"
+      ],
+      "metadata": {
+        "id": "xA-qcIq-tla0",
+        "outputId": "4632d195-c771-482d-dd34-35334fde26a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "xA-qcIq-tla0",
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([6, 28])\n",
+            "tensor([[ 1.1567e-02, -1.3905e-02,  4.4249e-01,  4.4479e-01,  5.6050e-01,\n",
+            "          1.8654e-01,  1.6815e-01,  9.1608e-02,  7.9842e-02,  5.6846e-02,\n",
+            "         -5.6383e-02, -4.1586e-01, -3.0046e-01, -4.4129e-01, -1.2487e-01,\n",
+            "         -2.1360e-02,  3.8059e-01,  1.4030e-01, -2.2683e-01,  4.0361e-02,\n",
+            "         -3.5513e-01,  1.2286e-01, -1.1625e-01,  2.7429e-01, -3.7994e-01,\n",
+            "          1.0395e+00, -9.2950e-02,  5.3336e-01],\n",
+            "        [ 1.2364e-03,  1.5917e-03,  2.1337e-02,  1.9573e-02,  2.1137e-02,\n",
+            "          8.7816e-03,  5.5823e-03,  3.8541e-03,  5.4790e-03,  4.4451e-03,\n",
+            "          5.5909e-04, -1.5194e-02, -9.8078e-03, -1.5460e-02, -2.7285e-03,\n",
+            "          1.4838e-04,  1.6907e-02,  5.7196e-03, -8.7047e-03,  1.8788e-03,\n",
+            "         -1.0980e-02,  7.3831e-03, -6.1784e-03,  1.1782e-02, -1.5514e-02,\n",
+            "          4.2404e-02, -3.0385e-03,  2.2697e-02],\n",
+            "        [-6.7802e+00, -3.3392e+00, -3.0078e+00, -2.6895e+00, -1.4771e+00,\n",
+            "         -9.8012e+00, -2.7667e+00, -6.6885e+00, -3.6154e+00, -2.4360e-01,\n",
+            "         -3.0820e+00, -4.3426e+00, -2.8522e+00, -3.5538e+00, -5.1005e+00,\n",
+            "         -7.2690e+00, -3.7278e+00, -8.3951e+00, -5.9503e+00, -7.3190e+00,\n",
+            "         -3.8952e+00, -3.9224e+00, -5.4866e+00, -5.0593e+00, -3.8241e+00,\n",
+            "         -6.3153e+00, -2.8994e+00,  1.3821e-02],\n",
+            "        [-2.7544e-02, -7.4963e-03,  4.3081e-02,  2.5346e-02,  3.3384e-02,\n",
+            "         -3.2097e-03,  9.8977e-03, -1.8144e-02,  1.1505e-02,  1.6450e-02,\n",
+            "         -5.0612e-03, -4.7903e-02, -2.8997e-02, -2.2593e-02, -1.8805e-02,\n",
+            "         -4.0017e-02,  3.4555e-02, -2.3593e-02, -2.7470e-02, -2.3746e-02,\n",
+            "         -2.0628e-02, -6.1066e-03, -2.3945e-02,  1.5763e-02, -4.2603e-02,\n",
+            "          6.6009e-02, -5.2692e-03,  6.3972e-02],\n",
+            "        [ 8.1471e-03, -4.6856e-02,  6.9930e-01,  7.2154e-01,  9.4626e-01,\n",
+            "          2.9276e-01,  2.9075e-01,  1.4682e-01,  1.0794e-01,  7.3446e-02,\n",
+            "         -1.2462e-01, -7.0970e-01, -5.2412e-01, -7.5864e-01, -2.3416e-01,\n",
+            "         -5.0169e-02,  6.1706e-01,  2.2714e-01, -3.8508e-01,  6.0137e-02,\n",
+            "         -6.2473e-01,  1.7705e-01, -1.8139e-01,  4.4577e-01, -6.3216e-01,\n",
+            "          1.7212e+00, -1.6127e-01,  8.7691e-01],\n",
+            "        [ 3.0823e+00,  2.9577e+00,  5.0124e+00,  3.6570e+00,  1.5304e+00,\n",
+            "          2.9358e+00,  1.4026e+00,  3.7660e+00, -2.4787e-01,  4.6674e+00,\n",
+            "          2.8056e+00,  4.2921e+00,  4.4657e+00,  2.3195e+00,  4.4658e+00,\n",
+            "          3.5708e+00,  1.4168e+00,  1.2352e+00,  1.4115e+00,  3.9045e+00,\n",
+            "          5.8984e+00,  4.4520e+00,  1.7051e+00,  2.9876e+00,  2.3738e+00,\n",
+            "          5.2562e+00,  3.6403e+00,  6.2303e+00]], grad_fn=<MmBackward0>)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# (6x6)(6x28) = (1x28)\n",
+        "attention_weights.shape, values.shape, context_vector.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CxfOCNguqbtF",
+        "outputId": "c58c7822-6d35-424a-9fcd-1ef0f1727cd6"
+      },
+      "id": "CxfOCNguqbtF",
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(torch.Size([6, 6]), torch.Size([6, 28]), torch.Size([6, 28]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
         }
       ]
     },
