--- a/deep-learning-from-scratch/01_foundations.ipynb
+++ b/deep-learning-from-scratch/01_foundations.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOgEBYHh9BJ1ek3rmIDpGRB",
+      "authorship_tag": "ABX9TyPOU0X9LFReiAtoZUjXuDo7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +52,7 @@
       "metadata": {
         "id": "vmzdNDEKObVK"
       },
-      "execution_count": 18,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -120,7 +120,7 @@
           "height": 492
         },
         "id": "J3LOcES5ijNu",
-        "outputId": "a85b21be-a23d-4811-e058-e455b585078c"
+        "outputId": "ddadc164-1748-4804-aa31-ad3459c8bae1"
       },
       "execution_count": 4,
       "outputs": [
@@ -336,10 +336,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 481
         },
         "id": "tt3GWwXcsLYU",
-        "outputId": "02bf9fa4-0eb1-4425-d842-7a34f9ae587c"
+        "outputId": "80239e39-439f-4b56-d28d-e74237904a5e"
       },
       "execution_count": 12,
       "outputs": [
@@ -471,10 +471,10 @@
       ],
       "metadata": {
         "id": "L3BtG7tKOhob",
-        "outputId": "f1d5954b-5113-42fa-f5c0-27fdc17fe76f",
+        "outputId": "4ba566cf-b1c8-4ec1-e235-676e3517b3f7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 486
         }
       },
       "execution_count": 16,
@@ -530,7 +530,7 @@
       "metadata": {
         "id": "-KFzjO49pLSW"
       },
-      "execution_count": 19,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -552,7 +552,7 @@
       "metadata": {
         "id": "SYP8_VemiEsh"
       },
-      "execution_count": 20,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -565,17 +565,138 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [],
+      "cell_type": "code",
+      "source": [
+        "def forward(X: ndarray, W: ndarray) -> ndarray:\n",
+        "  \"\"\"Computes the forward pass of a matrix multiplication.\"\"\"\n",
+        "  assert X.shape[1] == W.shape[0], \\\n",
+        "  \"\"\"\n",
+        "  For matrix multiplication, the number of columns in the first array should\n",
+        "  match the number of rows in the second; instead the number of columns in the\n",
+        "  first array is {0} and the number of rows in the second array is {1}.\n",
+        "  \"\"\".format(X.shape[1], W.shape[0])\n",
+        "\n",
+        "  # matrix multiplication\n",
+        "  N = np.dot(X, W)\n",
+        "  return N"
+      ],
       "metadata": {
-        "id": "HRlqxAi1joN0"
+        "id": "7O7YB5BQjocs"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def backward(X: ndarray, W: ndarray) -> ndarray:\n",
+        "  \"\"\"Computes the backward pass of a matrix multiplication with respect to the first argument\"\"\"\n",
+        "\n",
+        "  # backward pass\n",
+        "  dNdX = np.transpose(W, (1, 0))\n",
+        "\n",
+        "  return dNdX"
+      ],
+      "metadata": {
+        "id": "YvzEpQbkqEaf"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.random.seed(190203)\n",
+        "\n",
+        "X = np.random.randn(1, 3)\n",
+        "W = np.random.randn(3, 1)\n",
+        "print(X)"
+      ],
+      "metadata": {
+        "id": "pRpYajegruNI",
+        "outputId": "1ca917ab-a568-4677-85e8-7b56c7319953",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 0.4723  0.6151 -1.7262]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dNdX = backward(X, W)\n",
+        "dNdX"
+      ],
+      "metadata": {
+        "id": "sLW00ABjr6bs",
+        "outputId": "f4cd8434-a196-401e-b103-502638e19c48",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0.9282, -0.6075, -1.2214]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dNdX[0][1]"
+      ],
+      "metadata": {
+        "id": "C1SNMB3XsGD9",
+        "outputId": "1a4d8a62-e735-488a-c198-a558f382ae5a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-0.6075488808149324"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Vector Input Functions and Derivatives"
+      ],
+      "metadata": {
+        "id": "s712pYXxrW8b"
       }
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "7O7YB5BQjocs"
+        "id": "EtYXPRTzraBg"
       },
       "execution_count": null,
       "outputs": []
