--- a/deep-learning-basics/cross_entropy_loss.ipynb
+++ b/deep-learning-basics/cross_entropy_loss.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNtBytggL8mYjcWMFXtsLlJ",
+      "authorship_tag": "ABX9TyOQrvD+MDwZKaJzpwbi7F8y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,10 +75,25 @@
         "np.seterr(divide = 'ignore')"
       ],
       "metadata": {
-        "id": "e-wc9uqBoIaE"
+        "id": "e-wc9uqBoIaE",
+        "outputId": "16eb0640-31d9-4328-bbe0-0cdd83201da5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'divide': 'warn', 'over': 'warn', 'under': 'ignore', 'invalid': 'warn'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -123,7 +138,7 @@
           "height": 436
         },
         "id": "8Xoa_hqmoJU_",
-        "outputId": "65b3534f-ddcf-4b15-a8a8-d98111340be2"
+        "outputId": "74a15a09-e3cd-48fd-b39e-b677a138a6c9"
       },
       "execution_count": 2,
       "outputs": [
@@ -159,7 +174,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cXJew-Elo-Uc",
-        "outputId": "d3f8b3cb-81e6-46c9-e670-16cc8791e2fd"
+        "outputId": "a0031841-1596-45c8-d460-c0d3571d4f32"
       },
       "execution_count": 3,
       "outputs": [
@@ -195,7 +210,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mn6cmEU5pCqB",
-        "outputId": "37184049-e986-43ce-c9a1-c2b21711b38e"
+        "outputId": "95a932ef-de3f-43e7-bec8-8a3a24a5f51b"
       },
       "execution_count": 4,
       "outputs": [
@@ -230,7 +245,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QnxxQ4VHpHYn",
-        "outputId": "c3b2310c-ecc1-4354-9d9a-a1021d8cdd64"
+        "outputId": "0c22c0c1-92d8-4887-e63b-66374e591146"
       },
       "execution_count": 5,
       "outputs": [
@@ -298,9 +313,9 @@
           "height": 481
         },
         "id": "K-xycrwxygI6",
-        "outputId": "8435096f-7b2e-496c-808d-635eb364c114"
+        "outputId": "bc1153b0-14f6-4bcd-f5a0-3131c1fcdaa9"
       },
-      "execution_count": 9,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -310,7 +325,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 6
         },
         {
           "output_type": "display_data",
@@ -345,9 +360,134 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def binary_cross_entropy(t: float, p: float) -> float:\n",
+        "  t = np.float_(t)\n",
+        "  p = np.float_(p)\n",
+        "  # binary cross-entropy loss\n",
+        "  return -np.sum((t * np.log(p) + (1 - t) * np.log(1 - p)))"
+      ],
       "metadata": {
         "id": "kSh1h3w91mIz"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "t = [0, 1, 1, 0, 0, 1, 1]\n",
+        "p = [0.07, 0.91, 0.74, 0.23, 0.85, 0.17, 0.94]\n",
+        "\n",
+        "binary_cross_entropy(t, p)"
+      ],
+      "metadata": {
+        "id": "vF_NMDqAuRsF",
+        "outputId": "4451db4d-32fe-4b79-e156-4a6463cc6ea6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4.460303459760249"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "To get a better idea of how the loss varies with `p`, let’s modify the function definition to print out the values of the loss for each of the samples, as shown below."
+      ],
+      "metadata": {
+        "id": "FQWylWuZvCIv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def binary_cross_entropy(t: float, p: float) -> float:\n",
+        "  t = np.float_(t)\n",
+        "  p = np.float_(p)\n",
+        "\n",
+        "  for t_i, p_i in zip(t, p):\n",
+        "    print(f\"true_val = {t_i}, predicted_val = {p_i}, loss = {-(t_i * np.log(p_i) + (1 - t_i) * np.log(1 - p_i))}\")\n",
+        "  # binary cross-entropy loss\n",
+        "  return -np.sum((t * np.log(p) + (1 - t) * np.log(1 - p)))"
+      ],
+      "metadata": {
+        "id": "CbogMIZWvEI9"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"true_values: {t}\")\n",
+        "print(f\"predicted_values: {p}\")\n",
+        "print(f\"total loss: {binary_cross_entropy(t, p)}\")"
+      ],
+      "metadata": {
+        "id": "adsD_5FlvzXb",
+        "outputId": "ef506c97-c7ab-466a-cf32-07ae8786bafd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "true_values: [0, 1, 1, 0, 0, 1, 1]\n",
+            "predicted_values: [0.07, 0.91, 0.74, 0.23, 0.85, 0.17, 0.94]\n",
+            "true_val = 0.0, predicted_val = 0.07, loss = 0.0725706928348355\n",
+            "true_val = 1.0, predicted_val = 0.91, loss = 0.09431067947124129\n",
+            "true_val = 1.0, predicted_val = 0.74, loss = 0.3011050927839216\n",
+            "true_val = 0.0, predicted_val = 0.23, loss = 0.2613647641344075\n",
+            "true_val = 0.0, predicted_val = 0.85, loss = 1.897119984885881\n",
+            "true_val = 1.0, predicted_val = 0.17, loss = 1.7719568419318752\n",
+            "true_val = 1.0, predicted_val = 0.94, loss = 0.06187540371808753\n",
+            "total loss: 4.460303459760249\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We can see, when the true and predicted values are closer, the cross-entropy loss is lower; the loss increases when the true and predicted values are different.\n",
+        "\n",
+        "This validates our earlier observation that the loss is higher when the predictions are away from the true values."
+      ],
+      "metadata": {
+        "id": "E4SM2uhexEIo"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Multiclass Classification"
+      ],
+      "metadata": {
+        "id": "OSOfzCpLxTr9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "GO2XL3U3xUdw"
       },
       "execution_count": null,
       "outputs": []
